--- a/src/views/users/signup.ejs
+++ b/src/views/users/signup.ejs
@@ -11,6 +11,8 @@
 
     <main class="container">
 
+        <% include ../static/partials/messages.ejs %>
+
         <h1>Sign up</h1>
 
         <form action="/users" method="post">
