--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -17,7 +17,7 @@
         <header class="jumbotron my-4">
             <h1 class="display-3">Welcome to Blocipedia</h1>
             <p class="lead">Your personalized wiki, your way.</p>
-            <a href="#" class="btn btn-primary btn-lg">Sign up</a>
+            <a href="/users/signup" class="btn btn-primary btn-lg">Sign up</a>
         </header>
 
         <!-- Page Features -->
