--- a/src/views/users/sign_in.ejs
+++ b/src/views/users/sign_in.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -14,6 +15,14 @@
 
         <h1>Sign in</h1>
 
+        <form action="/users/sign_in" method="post">
+            <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" name="name" aria-describedby="nameHelp" placeholder="Enter Name"
+                autocomplete="on">
+            <small class="text-muted" id="nameHelp">Enter name you used for sign up</small>
+        </div>
+        
         <form action="/users/sign_in" method="post">
 
             <div class="form-group">
