--- a/src/views/static/partials/messages.ejs
+++ b/src/views/static/partials/messages.ejs
@@ -1,9 +1,9 @@
 <% if(messages.error || messages.notice) { %>
-
-<div class="alert alert-<%= messages.error ? 'danger' : 'warning' %> alert-dismissible fade show" role="alert"></div>
+<div class="alert alert-<%= messages.error ? 'danger' : 'warning'  %> alert-dismissible fade show" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
+
     <% if(messages.error) { %>
     Validation errors:
     <ul>
