--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -18,7 +18,7 @@
                 <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Title">
             </div>
             <div class="form-group">
-                <label for="description">Body</label>
+                <label for="body">Body</label>
                 <textarea rows="4" class="form-control" name="body" placeholder="Enter text"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
