--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -12,6 +12,11 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
+      <!--      <li class="nav-item">
+                <a class="nav-link" href="/wikis">Wikis
+                <span class="sr-only">(current)</span>
+                </a>
+            </li> -->
             <% if(currentUser) { %>
                 <li class="nav-item">
                 <a class="nav-link" href="/users/sign_out">Sign out</a>
