--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -11,6 +11,10 @@
 
         <h1>Wikis</h1>
 
+        <% if(currentUser && currentUser.isAdmin() || currentUser.isPremium()) { %>
+        <a href="/wikis/new" class="btn btn-success">New Wiki</a>
+        <% } %>
+
         <ul class="list-group">
             <!-- #1 -->
             <% wikis.forEach((wiki) => { %>
