--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -11,6 +11,8 @@
 
         <h1>Wikis</h1>
 
+        <a href="/wikis/new" class="btn btn-success">New Wiki</a>
+
         <ul class="list-group">
             <!-- #1 -->
             <% wikis.forEach((wiki) => { %>
