User profiles, upgrade, downgrade pages now showing after stripe integration

--- a/src/views/users/downgrade.ejs
+++ b/src/views/users/downgrade.ejs
@@ -10,7 +10,7 @@
     <main class="container">
         <% include ../static/partials/messages.ejs %>
         <h1>Hey
-            <%= user.username %>!
+            <%= user.name %>!
         </h1>
         <h3>Your current account status is
             <%= user.role %>
