--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -9,19 +9,18 @@
     <% include ../static/partials/navbar.ejs %>
     <main class="container">
         <% include ../static/partials/messages.ejs %>
-
-        <h1>Hi! Welcome <%= user.name %>.
+        <h1>Hi! Welcome
+            <%= user.name %>
         </h1>
         <h3>Your account status is:
             <%= user.role %>
         </h3>
-        <% if(!currentUser.isPremium()) { %>
+        <!-- If currentUser == "standard" -->
         <a href="/users/<%= user.id %>/upgrade" class="btn btn-warning">Upgrade to Premium</a>
         <p>DYK -- If you upgrade to Premium, you can edit public wikis, and create and read private wikis.</p>
-        <% } else { %>
+        <!-- If currentUser == "premium" -->
         <a href="/users/<%= user.id %>/downgrade" class="btn btn-warning">Downgrade to Standard</a>
         <p>With a Standard account, you will no longer be able to edit public wikis, or read and create private wikis.</p>
-    <% } %>
     </main>
     <% include ../static/partials/baseScripts.ejs %>
 </body>
