Account Upgrade - Stripe Working

--- a/src/views/users/upgrade.ejs
+++ b/src/views/users/upgrade.ejs
@@ -16,9 +16,14 @@
             <%= user.role %>
         </h3>
         <p>Ready to upgrade? You must be a baller.</p>
-        <form action="/users/<%= user.id %>/downgrade" method="POST">
-            <button type="Submit" class="btn btn-warning">Let's do this upgrade thing</button>
-        </form>
+        
+
+<form action="/users/ <%=user.id %>/upgrade" method="POST">
+    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="pk_test_YCeYlwNVKAI090sGs8BkQe0d"
+        data-amount="1500" data-name="Blocipedia" data-description="Testing payment" data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+        data-locale="auto">
+    </script>
+</form>
     </main>
     <% include ../static/partials/baseScripts.ejs %>
 </body>
