--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -25,6 +25,12 @@
                 <!-- #3 -->
                 <textarea rows="4" class="form-control" name="body" placeholder="Enter Body"><%= wiki.body %></textarea>
             </div>
+            <% if(currentUser.isPremium() || currentUser.isAdmin()) { %> 
+                <div class="form-group">
+                    <label for ="private">Check to make Wiki private:</label>
+                    <input value="<% wiki.private %>" type="checkbox" class="form-control" name="private" placeholder="<% wiki.private %>">
+                </div>
+            <% } %>
             <button type="submit" class="btn btn-primary">Update</button>
         </form>
     </main>
