--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -8,21 +8,27 @@
 <body>
     <main class="container">
         <% include ../static/partials/navbar.ejs %>
-
         <h1>Wikis</h1>
-
-        <% if(currentUser && currentUser.isAdmin() || currentUser.isPremium()) { %>
-        <a href="/wikis/new" class="btn btn-success">New Wiki</a>
-        <% } %>
+<a href="/wikis/new" class="btn btn-success">New Wiki</a>
 
         <ul class="list-group">
-            <!-- #1 -->
             <% wikis.forEach((wiki) => { %>
-            <!-- #2 -->
-            <li class="list-group-item">
-                <a href="/wikis/<%= wiki.id %>">
-                    <%= wiki.title %> </a>
-            </li>
+          
+                <% if(wiki.private) { %>
+                    <% if(currentUser) { %>
+                        <% if(currentUser.isPremium() || currentUser.isAdmin()) { %>
+                            <li class="list-group-item">
+                                <a href="/wikis/<%= wiki.id %>">
+                                    <%= wiki.title %> </a>
+                            </li>
+                        <% } %>
+                    <% } %>
+                <% } else { %>
+                    <li class="list-group-item">
+                        <a href="/wikis/<%= wiki.id %>">
+                            <%= wiki.title %> </a>
+                    </li>
+                <% } %>
             <% }) %>
         </ul>
 
