--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -6,29 +6,38 @@
 </head>
 
 <body>
+
     <% include ../static/partials/navbar.ejs %>
 
     <main class="container">
+
+        <% include ../static/partials/messages.ejs %>
+
         <h1>
             <%= wiki.title %>
         </h1>
 
-        <% if(currentUser) { %>
-    <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
-    <% } %>
+        <% if(wiki.private) { %>
+        <p>This wiki is private. Only Premium members may edit private wikis.</p>
+        <% if(currentUser.isPremium() || currentUser.isAdmin()) { %>
+        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit wiki</a>
+        <% } %>
+        <% } else { %>
+        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit wiki</a>
+        <% } %>
 
-    <% if(currentUser.isAdmin()) { %>
-    <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
-        <button type="submit" class="btn btn-danger">Delete Wiki</button>
-    </form>
-    <% } %>
+        <% if(currentUser.isAdmin()) { %>
+        <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
+            <button type="submit" class="btn btn-danger">Delete wiki</button>
+        </form>
+        <% } %>
+
         <p>
             <%= wiki.body %>
         </p>
+
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
 
 </body>
-
-</html>
