Updating view files

--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -20,10 +20,10 @@
         <% if(wiki.private) { %>
         <p>This wiki is private. Only Premium members may edit private wikis.</p>
         <% if(currentUser.isPremium() || currentUser.isAdmin()) { %>
-        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit wiki</a>
+        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit Wiki</a>
         <% } %>
         <% } else { %>
-        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit wiki</a>
+        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit Wiki</a>
         <% } %>
 
         <% if(currentUser.isAdmin()) { %>
