--- a/src/views/users/collaborations.ejs
+++ b/src/views/users/collaborations.ejs
@@ -10,14 +10,20 @@
     <main class="container">
         <% include ../static/partials/messages.ejs %>
         <h1> Collaborations</h1>
-        <ul class="list-group">
-            <% collaborations.forEach((collaboration) => {  %>
-            <li class="list-group-item">
-                <a href="/wikis/<%= collaboration.wikiId %>">
-                    <%= collaboration.Wiki.title %></a>
-            </li>
-            <% }) %>
-        </ul>
+        <% if(collaborations.length !== 0) { %>
+        <p>
+            <ul class="list-group">
+                <% collaborations.forEach((collaboration) => {  %>
+                <li class="list-group-item">
+                    <a href="/wikis/<%= collaboration.Wiki.id %>">
+                        <%= collaboration.Wiki.title %></a>
+                </li>
+                <% }) %>
+            </ul>
+        </p>
+        <% } else { %>
+        <p class="lead">You are not a collaborator on any wikis!</p>
+        <% } %>
     </main>
 </body>
 
