--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -10,20 +10,20 @@
     <main class="container">
         <% include ../static/partials/messages.ejs %>
         <h1>Hi! Welcome
-            <%= user.name %>
+            <%= currentUser.name %>
         </h1>
         <h3>Your account status is:
-            <%= user.role %>
+            <%= currentUser.role %>
         </h3>
         <hr>
         <h3>Your current wiki collaborations:</h3>
         <a href="/users/collaborations" class="btn btn-primary">See Collaborations</a>
-
+        <hr>
         <!-- If currentUser == "standard" -->
-        <a href="/users/<%= user.id %>/upgrade" class="btn btn-warning">Upgrade to Premium</a>
+        <a href="/users/<%= currentUser.id %>/upgrade" class="btn btn-warning">Upgrade to Premium</a>
         <p>DYK -- If you upgrade to Premium, you can edit public wikis, and create and read private wikis.</p>
         <!-- If currentUser == "premium" -->
-        <a href="/users/<%= user.id %>/downgrade" class="btn btn-warning">Downgrade to Standard</a>
+        <a href="/users/<%= currentUser.id %>/downgrade" class="btn btn-warning">Downgrade to Standard</a>
         <p>With a Standard account, you will no longer be able to edit public wikis, or read and create private wikis.</p>
     </main>
     <% include ../static/partials/baseScripts.ejs %>
