--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -24,6 +24,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/wikis">Wikis</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/collaborations">Collaborations</a>
+                </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/users/sign_out">Sign out</a>
                 </li>
