--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -32,6 +32,10 @@
                 </div>
             <% } %>
             <button type="submit" class="btn btn-primary">Update</button>
+
+<% if(currentUser && (currentUser.id == wiki.userId || currentUser && currentUser.isAdmin())) { %>
+<a href='/wikis/<%= wiki.id %>/collaborators' class="btn btn-info">Edit Collaborators</a>
+<% } %>
         </form>
     </main>
 
