Refactored Private_Public Wikis

--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -12,6 +12,15 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/wikis">Wikis</a>
+                </li>
+
+            <% if(currentUser && currentUser.role != "standard") { %>
+                <li class="nav-item">
+                <a class="nav-link" href="/wikis/private">Private Wikis</a>
+                </li>
+            <% }%>
       <!--      <li class="nav-item">
                 <a class="nav-link" href="/wikis">Wikis
                 <span class="sr-only">(current)</span>
@@ -20,9 +29,6 @@
             <% if(currentUser) { %>
                 <li class="nav-item">
                     <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/wikis">Wikis</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/users/sign_out">Sign out</a>
@@ -35,6 +41,8 @@
                     <a class="nav-link" href="/users/sign_in">Sign in</a>
                 </li>
             <% }%>
+            
+            
             </ul>
         </div>
     </div>
