--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -32,6 +32,10 @@
         </form>
         <% } %>
 
+        <% if(wiki.private) { %>
+            <a href="/wikis/<%= wiki.id %>/collaborators" class="btn btn-info">Edit Collaborators</a>
+        <% } %>
+
         <p>
             <%- wiki.body %>
         </p>
