--- a/src/views/collaborators/show.ejs
+++ b/src/views/collaborators/show.ejs
@@ -1,12 +1,45 @@
-<% if(collaborator) { %>
+<!DOCTYPE html>
+<html>
 
-    <!-- #3 -->
-    <% if(currentUser && currentUser.id === collaborator.userId || currentUser.isAdmin()) { %>
-    <form style="display:initial" action="/wikis/<%= wiki.id %>/collaborators/<%= collaborator.id %>/remove"
-        method="post">
-        <button type="submit" class="btn btn btn-sm btn-outline-danger">Delete</button>
-    </form>
-    <% } %>
-    <hr>
-</div>
-<% } %>
+<head>
+    <% include ../static/partials/head.ejs %>
+</head>
+
+<body>
+    <% include ../static/partials/navbar.ejs %>
+    <main class="container">
+        <% include ../static/partials/messages.ejs %>
+        <h1>Collaborators for
+            <%= wiki.title %> Wiki</h1>
+        <hr>
+        <h4> Add a New Collaborator</h4>
+        <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
+        <form style="width:25%" action="/wikis/<%= wiki.id %>/collaborators/create" method="post">
+            <div class="input-group">
+                <input type="text" class="form-control" name="collaborator" placeholder="Enter username">
+                <button type="submit" class="btn btn-secondary">Add</button>
+            </div>
+        </form>
+        <% } %>
+        <% if(collaborators) { %>
+        <ul class="list-group">
+            <% collaborators.forEach((collaborator) => {  %>
+            <li class="list-group-item">
+                <h4>
+                    <%= collaborator.User.username %>
+                </h4>
+                <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
+                <form action="/wikis/<%= wiki.id %>/collaborators/delete" method="post">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                    <input type="hidden" value="<%= collaborator.User.id %>" class="form-control" name="collaborator">
+                </form>
+                <% } %>
+            </li>
+            <% }) %>
+        </ul>
+        <% } %>
+    </main>
+    <% include ../static/partials/baseScripts.ejs %>
+</body>
+
+</html>
