--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Blocipedia</a>
+        <a class="navbar-brand" href="#">Lexipedia</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,6 +27,9 @@
                 </a>
             </li> -->
             <% if(currentUser) { %>
+<li class="nav-item">
+    <a class="nav-link" href="/users/<%= currentUser.id %>/collaborations">Collabs</a>
+</li>
                 <li class="nav-item">
                     <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
                 </li>
